--- a/app/src/main/res/layout/activity_directory.xml
+++ b/app/src/main/res/layout/activity_directory.xml
@@ -35,13 +35,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="sans-serif-thin"
                 android:gravity="center"
                 android:text="通讯录"
                 android:textColor="#000000"
                 android:textSize="9pt"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <TextView
+                android:id="@+id/Add_contacts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -58,7 +60,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/Search"
+                android:id="@+id/Search_Contacts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
@@ -74,10 +76,284 @@
                 android:paddingTop="5dp" />
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/list_View"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#ffffff">
+
+            <TextView
+                android:id="@+id/Main_Index"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/darker_gray"
+                android:layout_marginRight="30px"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <ListView
+                    android:id="@+id/list_View"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"></ListView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="30px"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/a"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="A"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/b"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="B"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/c"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="C"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/d"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="D"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/e"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="E"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/f"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="F"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/g"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="G"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/h"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="H"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/i"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="I"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/j"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="J"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/k"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="K"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/l"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="L"
+                    android:textColor="#1E90FF" />
+
+                <TextView
+                    android:id="@+id/m"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="M"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/n"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="N"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/o"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="O"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/p"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="P"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/q"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Q"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/r"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="R"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/s"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="S"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/t"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="T"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/u"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="U"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/v"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="V"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/w"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="W"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/x"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="X"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/y"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Y"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/z"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Z"
+                    android:textColor="#1E90FF"
+                    android:textSize="10sp" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
