--- a/app/src/main/res/layout/item1.xml
+++ b/app/src/main/res/layout/item1.xml
@@ -5,13 +5,20 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/Char_Index"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/darker_gray"
+        android:textStyle="bold"/>
+
+    <TextView
         android:id="@+id/Member"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="8pt"
-        android:paddingLeft="10dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:text="程柳青" />
 
     <View
