update datbase(change columns)

--- a/app/src/main/res/layout/activity_add__contacts.xml
+++ b/app/src/main/res/layout/activity_add__contacts.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.guanhuawu.directory_demo.Add_Contacts">
+    tools:context="com.example.guanhuawu.directory_demo.AddContacts">
 
     <LinearLayout
         android:layout_width="0dp"
