--- a/app/src/main/res/layout/activity_add__contacts.xml
+++ b/app/src/main/res/layout/activity_add__contacts.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/Back"
+                android:id="@+id/tvBack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -46,7 +46,7 @@
                 android:textStyle="normal" />
 
             <TextView
-                android:id="@+id/Save"
+                android:id="@+id/tvSave"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
