--- a/app/src/main/res/layout/item1.xml
+++ b/app/src/main/res/layout/item1.xml
@@ -5,14 +5,14 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/Char_Index"
+        android:id="@+id/tvCharIndex"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/darker_gray"
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/Member"
+        android:id="@+id/tvMember"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="8pt"
